--- a/src/app/client/component/header/header.component.html
+++ b/src/app/client/component/header/header.component.html
@@ -19,15 +19,15 @@
               <div class="song_img">
               <img [src]="song?.image_path" alt="">
               </div>
-              <a routerLink="songbox"> 
+              <a [routerLink]="['songbox',song.id]" > 
               <div class="detail">
               <div class="song_name">
                   <small>{{song.title}}</small>
               </div>
               <div class="artist_name">
-                  <small>{{song.description}}</small>
+                  <small>{{song.category.name}}</small>
               </div>
-              </div>
+              </div> 
             </a>                
       </li>
   </ul>
@@ -41,7 +41,7 @@
   <a title="profile" [ngClass]="['profile']" [ngStyle]="{'display': loging_s}">
     <img src="../assets/image/user.jpg" alt="" data-bs-toggle="dropdown" aria-expanded="false">
     <ul class="dropdown-menu">
-      <li class="dropdown-item"><a routerLink="profile">Profile</a></li>
+      <li class="dropdown-item"><a routerLink="profile"><i class="fa-solid fa-user"></i> Profile</a></li>
       <li class="dropdown-item"><a (click)="logout()"><i class="fas fa-sign-out-alt"></i> Logout</a></li>
     </ul>   
   </a>
@@ -50,8 +50,9 @@
 
  </div>
 </div>
+
 <!-- Modal -->
-<div class="modal fade " id="exampleModal" tabindex="-1" aria-labelledby="exampleModalLabel" aria-hidden="true">
+<div class="modal fade " id="exampleModal" tabindex="-1" aria-labelledby="exampleModalLabel" aria-hidden="false">
   <div class="modal-dialog modal-dialog-centered">
     <div class="modal-content">
       <div class="modal-header">
