--- a/src/app/client/component/profile/profile.component.scss
+++ b/src/app/client/component/profile/profile.component.scss
@@ -1,8 +1,11 @@
 .my_prof_sec{
     padding: 20px 45px;
-    background-color: #ddd;
+    background-color: #fafafb;
+    max-width: 50%;
+    margin: 10px auto;
+    border-radius: 4px;
+
     .prof_box{
-        max-width: 50%;
         margin: 0 auto;
         // text-align: center;
         .user_img{
@@ -18,6 +21,13 @@
         }
         .user_name{
             text-align: center;
+            text-transform: capitalize;
+            color: #e72c30;
+        }
+    }
+    .radiobtn{
+        label{
+            margin-right: 10px;
         }
     }
 }
