--- a/src/app/client/component/songdetail/songdetail.component.scss
+++ b/src/app/client/component/songdetail/songdetail.component.scss
@@ -101,7 +101,7 @@
     }
     .queue_list{
         width: 50%;
-        min-height: 350px;
+        height: 400px;
         
         .title_box{
             display: flex;
