--- a/src/app/client/component/subscribe/subscribe.component.html
+++ b/src/app/client/component/subscribe/subscribe.component.html
@@ -1,1 +1,9 @@
-<p>subscribe works!</p>
+<div class="subscription">
+    <h4>Please upgrade your plane</h4>
+    <div class=" radiobtn">
+        <label>&nbsp; choose your subscription plane : </label>
+        <label><input type="radio" name="subscription_type" id="subscription_type" formControlName="subscription_type"  value="1"/> Premium </label>
+        <label><input type="radio" name="subscription_type" id="subscription_type" formControlName="subscription_type" value="2"/> VIP  </label>
+        <label><input type="radio" name="subscription_type" id="subscription_type" formControlName="subscription_type" value="3"/> Free </label>        
+      </div>
+</div>
