--- a/src/app/client/pages/regrister/regrister.component.html
+++ b/src/app/client/pages/regrister/regrister.component.html
@@ -46,7 +46,7 @@
            </div>
       
            <div class=" radiobtn">
-            <label><i class="fa fa-transgender" aria-hidden="true"></i>&nbsp; Gender : </label>
+            <label><i class="fa fa-transgender" aria-hidden="true"></i>&nbsp; subscription plane : </label>
             <label><input type="radio" name="subscription_type" id="subscription_type" formControlName="subscription_type"  value="1"/> Premium </label>
             <label><input type="radio" name="subscription_type" id="subscription_type" formControlName="subscription_type" value="2"/>VIP  </label>
             <label><input type="radio" name="subscription_type" id="subscription_type" formControlName="subscription_type" value="3"/>Free </label>
