--- a/src/app/client/component/header/header.component.scss
+++ b/src/app/client/component/header/header.component.scss
@@ -109,15 +109,22 @@
       display: none;
       width: 40px;
       height: 40px; 
-      cursor: pointer;     
+      cursor: pointer;
+    
       img{
-       width: 100%;
-       height: 100%;
+        width: 40px;
+        height: 40px; 
        border-radius: 50%;
       border: 1px solid color(pure-black);     
       } 
       .dropdown-menu{
         z-index: 2;
+        li{
+          a{
+            color: #000;
+            text-decoration: none;
+          }
+        }
       }   
     }
     .login_text{
